Model, services and some directives.

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -30,7 +30,7 @@
         }
       ],
       "jQuery": {
-        "key": "jquery2"
+        "key": "jqLite"
       },
       "resource": {
         "key": "$http",
