--- a/bower.json
+++ b/bower.json
@@ -8,22 +8,22 @@
     "angular-sanitize": "^1.6.9",
     "angular-messages": "^1.6.9",
     "angular-aria": "^1.6.9",
-    "jquery": "^3.3.1",
     "angular-ui-router": "^1.0.15",
-    "angular-material": "^1.1.7",
+    "angular-material": "^1.1.8",
     "material-design-iconfont": "^0.0.2",
     "malarkey": "yuanqing/malarkey#~1.3.1",
     "angular-toastr": "^2.1.1",
-    "moment": "^2.21.0",
+    "moment": "^2.22.1",
     "animate.css": "^3.5.2",
     "angular": "^1.6.9",
-    "ng-webworker": "^0.2.3"
+    "NgDexie": "ng-dexie#^0.0.21",
+    "dexie": "^2.0.2",
+    "lodash": "^4.17.10"
   },
   "devDependencies": {
     "angular-mocks": "^1.6.9"
   },
   "resolutions": {
-    "jquery": "^3.3.1",
     "angular": "^1.6.9",
     "angular-animate": "^1.6.9",
     "angular-cookies": "^1.6.9",
@@ -32,10 +32,11 @@
     "angular-messages": "^1.6.9",
     "angular-aria": "^1.6.9",
     "angular-ui-router": "^1.0.15",
-    "angular-material": "^1.1.7",
+    "angular-material": "^1.1.8",
     "angular-toastr": "^2.1.1",
-    "moment": "^2.21.0",
+    "moment": "^2.22.1",
     "animate.css": "^3.5.2",
-    "angular-mocks": "^1.6.9"
+    "angular-mocks": "^1.6.9",
+    "dexie": "^2.0.2"
   }
 }
