--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular": "^1.6.9",
     "NgDexie": "ng-dexie#^0.0.21",
     "dexie": "^2.0.2",
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "angular-base64-upload": "^0.1.23"
   },
   "devDependencies": {
     "angular-mocks": "^1.6.9"
