--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "NgDexie": "ng-dexie#^0.0.21",
     "dexie": "^2.0.2",
     "lodash": "^4.17.10",
-    "angular-base64-upload": "^0.1.23"
+    "angular-base64-upload": "^0.1.23",
+    "ng-scrollbars": "^0.0.11"
   },
   "devDependencies": {
     "angular-mocks": "^1.6.9"
